tests/macros/password/page_size.stderr
error: option `page_size` does not exist for kind `password`
 --> $DIR/page_size.rs:2:38
  |
2 |     discourse::questions![Password { page_size: todo!() }];
  |                                      ^^^^^^^^^
