tests/macros/password/page_size.rs
fn main() {
    discourse::questions![Password { page_size: todo!() }];
}
